# passport-reader

./: .gitignore  settings.gradle.kts
app/: build.gradle  build.gradle.kts
app/libs/: PLACE_SUNMI_SDK_HERE.txt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: paddleocr_keys.txt
app/src/main/cpp/: CMakeLists.txt  common.cpp  common.h  paddleocr_ncnn.cpp
app/src/main/cpp/ncnn/arm64-v8a/lib/cmake/ncnn/: ncnn.cmake
app/src/main/java/com/tananaev/passportreader/: AppLog.kt  CaptureActivity.kt  LogOverlayHelper.kt  MRZParser.kt  MainActivity.kt  MainApplication.kt  ResultActivity.kt  SunmiCardService.kt  SunmiNfcSwitcher.kt  SunmiPaySdkManager.kt
app/src/main/java/com/tananaev/passportreader/core/: stubs.kt
app/src/main/java/com/tananaev/passportreader/core/camera/: Camera2Controller.kt  CameraInfo.kt  CameraMetadataHelper.kt  CameraResolutionHelper.kt
app/src/main/java/com/tananaev/passportreader/core/contracts/: AIProcessor.kt  AIResult.kt  OcrEngineCapable.kt  RawJsonCapable.kt
app/src/main/java/com/tananaev/passportreader/core/feature/: Feature.kt  FeatureCategory.kt  FeatureConfig.kt  FeatureInitializer.kt  FeatureRegistry.kt
app/src/main/java/com/tananaev/passportreader/features/camera/: AutoFramingConfig.kt  SoftwareAutoFramingController.kt
app/src/main/java/com/tananaev/passportreader/utils/: CameraUtils.kt  ImageUtil.kt
app/src/main/java/com/tananaev/passportreader/view/: CaptureActivity.kt  ResultActivity.kt
app/src/main/res/layout/: activity_capture.xml  activity_main.xml  activity_result.xml
gradle/: libs.versions.toml
(+26 files in other folders)
